    * src/generic/util/sqlite.h: Use that information.
    * src/generic/util/sqlite.h (statement, blob): Also befriend the new
      boost::make_shared prototype.  Some better solution may be possible at a
      later point, this is enough for now.
    * src/cmdline/mocks/terminal.h: Remove predefinition of boost::make_shared
      that conflicts with Boost 1.53.

- Internal changes:

  * task_list is not extern
    * src/generic/apt/tasks.h:
    * src/pkg_grouppolicy.cc: Variable task_list is only used within tasks.cc,
      and need not be extern.

- Documentation:

  * Russian translation.  Thanks to Lev Lamberov and the Russian localization
    team.

  * Replace solitary use of "visual mode" with "visual interface" in
    doc/en/aptitude.xml

  * Typo in manual: 'Apt::AutoRemove::InstallRecommends' should be
    'RecommendsImportant' in doc/en/manpage.xml

- Translation updates:

  * Some config item strings should be the same width
    * po/*.po: Use whitespace to adjust the widths where they differ.
    * src/apt_config_treeitems.cc: Add comment for translators.
  * German, by Benjamin Weis and Holger Wansing (Closes: #729329)
  * Japanese (Closes: #728115)
  * Russian by Yuri Kozlov (Closes: #725280)
  * Asturian by Inigo Varela (Closes: #698512)
  * Danish by Morten Bo Johansen (Closes: #700885)
  * French by David Prévot (Closes: #693323)

[9/7/2012]
Version 0.6.8.2                             "Say 'what' again"

- New features:

  * [all]: Support for matching architectures using specification
           strings and wildcards (for example, "linux-any").  See
           Debian Policy section 11.1 "Architecture specification
           strings" for more details.

- Minor bugs:

  * [cmdline]: Fix typo which prevented installing tasks using the
               apt-get compatible syntax ("aptitude install
               gnome-desktop^").

  * [cmdline]: Do not assume that APT::Default-Release always provides