@@ -22,6 +22,10 @@
     * src/cmdline/mocks/terminal.h: Remove predefinition of boost::make_shared
       that conflicts with Boost 1.53.
 
+  * Update support for automake and similar tools (autogen.sh)
+    * Do not restrict them to -1.11, use default instead
+    * Add --copy to automake, otherwise creates symbolic links
+
 - Internal changes:
 
   * task_list is not extern
